#DOKKX-5 Fixed z-index of content

--- a/dokkx/scss/modules/_content.scss
+++ b/dokkx/scss/modules/_content.scss
@@ -11,7 +11,7 @@
   padding-top: 3em;
 
   position: relative;
-  z-index: z($z-index-elements, nav);
+  z-index: z($z-index-elements, content);
 
   background-color: rgba(255, 255, 255, 1);
 
